<resources>
    <string name="app_name">ThisBookIs</string>
    <string name="kakao_app_key">35eab979c96184cb86d2d12dc7234c78</string>
    <string name="facebook_app_key">199339774527583</string>
    <string name="naver_app_key">eaZgH_GFR8bQnDWF8QhA</string>
    <string name="naver_api_url">https://openapi.naver.com/v1/nid/me</string>

    <!-- firebase 테이블 키 -->
    <string name="firebase_user_data_key">user</string>
    <string name="firebase_book_data_key">book</string>

    <string name="kakao_api_key">KakaoAK 8e17b1d2fa09b153bd18194d7e3cbe74</string>

    <string name="comment">댓글</string>
    <string name="comment_hint">댓글을 입력하여주세요.</string>
    <string name="comment_input">게시</string>

    <string name="my_report_item_menu_desc">내 독후감 삭제 및 수정 팝업 버튼</string>
    <string name="my_report_item_thumnail_desc">내 독후감 책 표지</string>
    <string name="my_report_item_lock_desc">내 독후감 공개 여부 아이콘</string>

    <string name="my_page_draft_hide_desc">작성중인 독후감이 없습니다.</string>
    <string name="my_page_draft_ll_desc">쓰고 있는 독후감</string>
    <string name="more_view_desc">더보기  ></string>
    <string name="my_draft">임시저장</string>
    <string name="recent_searches">최근 검색한 책</string>

    <string name="search_book">책 검색</string>
    <string name="home">홈</string>
    <string name="recommend">추천</string>

    <string name="top_rank_book_card_desc">유저들이 많이 읽은책</string>
    <string name="top_rank_report_card_desc">유저들이 가장 좋아하는 독후감</string>
    <string name="releated_report_card_title">다른 유저의 생각은?</string>
    <string name="best_seller">베스트셀러</string>
    <string name="copyright">출처 : 인터파크</string>
    <string name="top3">TOP 3</string>

    <string name="join_guide">- 프로필 사진 등록을 위해 권한을 허용하여 주세요\n- 이 단계에서는 앱이 로그인에 사용하신 소셜에 연동이 이미 되어 있으므로 회원 가입을 취소하고 싶으시다면 해당 소셜에서 연동을 해제하여 주세요</string>
    <string name="notice">공지사항</string>
    <string name="app_info_button_text">어플리케이션 정보</string>
    <string name="app_info">개발자 : 김광영\n버전 : 1.0.0\n개발자 이메일 : kwangyoung.dev@gmail.com</string>

    <string name="inter_park_api_key">771E0F8039AED93A550A2E5AF9B584422BCE5DADA5A58066811AADA99D972FA1</string>
</resources>
