<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <ImageView
                android:id="@+id/report_writer_profile_image_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/profile_image_background"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp">
                <TextView
                    android:id="@+id/report_writer_nickname_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/report_write_time_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#55464646"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/report_book_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/line_background"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/report_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:paddingEnd="30dp"
            android:paddingStart="0dp">
            <ImageView
                android:id="@+id/report_like_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="5dp"
                android:src="@drawable/ic_like_false"/>
            <TextView
                android:id="@+id/report_like_cnt_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="#99464646"/>
            <ImageView
                android:id="@+id/report_comment_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="5dp"
                android:src="@drawable/ic_comment"
                android:layout_marginStart="7dp"/>
            <TextView
                android:id="@+id/report_comment_cnt_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="#99464646"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_background"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"/>
        <TextView
            android:id="@+id/report_contents_tv"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="14sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_background"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/comment"
            android:padding="10dp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#33dcdcdc"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/comment_edittext_background"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="10dp"
                    android:padding="7dp"
                    android:gravity="center_vertical">
                    <EditText
                        android:id="@+id/report_comment_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:hint="@string/comment_hint"
                        android:textSize="15sp"
                        android:layout_marginStart="10dp"
                        android:inputType="text"
                        android:importantForAutofill="no"/>
                    <TextView
                        android:id="@+id/report_comment_input_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/comment_input"
                        android:textColor="@color/on_comment_content"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone"
                        />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/report_comment_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/report_comment_hide_ll"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:background="#dcdcdc"
                android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_lock" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="독후감이 비공개 상태입니다."
                    android:gravity="center"
                    />
            </LinearLayout>
        </FrameLayout>



    </LinearLayout>

</ScrollView>