<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:mContext=".fragment.MyPageFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- 프로필 부분 시작 -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/background_image"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:padding="20dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@android:color/transparent"
                    >

                    <ImageView
                        android:id="@+id/my_page_profile_image_iv"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_user_profile" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="20dp">
                        <TextView
                            android:id="@+id/my_page_nickname_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:text="읽은책"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/my_page_my_books_cnt_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:layout_marginLeft="5dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="권"
                                android:textSize="12sp"
                                android:textColor="@color/white"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:text="독후감"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/my_page_my_reports_cnt_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:layout_marginLeft="5dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="개"
                                android:textSize="12sp"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#66dcdcdc" />

            <!-- 내가 읽은 책 & 내가 쓴 독후감 부분 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/my_page_my_books_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/ic_bookshelf" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="내가 읽은 책"
                        android:textColor="@color/black" />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#BDBDBD"/>
                <LinearLayout
                    android:id="@+id/my_page_my_reports_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_report"
                        android:layout_marginEnd="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="내가 쓴 독후감"
                        android:textColor="@color/black" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_background"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_page_draft_ll_desc"
                android:padding="7dp"
                android:textSize="13sp"
                android:textColor="@color/mainColor"
                android:textStyle="bold"/>
            <!-- 임시저장 부분 -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/my_page_draft_ll">
                    <TextView
                        android:id="@+id/my_page_draft_title_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:padding="5dp" />
                    <TextView
                        android:id="@+id/my_page_draft_contents_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="5"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/line_background"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:id="@+id/my_page_draft_more_view_btn"
                        android:text="@string/more_view_desc"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:layout_marginBottom="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/my_page_draft_hide_ll"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_sad"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_page_draft_hide_desc"
                        android:gravity="center"
                        android:textSize="12sp"/>
                </LinearLayout>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#66dcdcdc" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_heart"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:text="내가 좋아하는 독후감"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_background"/>
                <LinearLayout
                    android:id="@+id/my_page_setting_modify_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_cogwheel"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:text="설정 및 프로필 수정"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    <Button
        android:id="@+id/my_page_logout_btn"
        android:layout_gravity="center_horizontal"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="로그아웃"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@drawable/logout_button_background"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>